--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -28,7 +28,16 @@
       "Je travaille dans le web depuis plusieurs années à présent. Le web est une plate-forme que j'admire, pour le partage de connaissances ainsi que l'expression ouverte (et chaotique) qu'elle permet. Je m'intéresse ainsi particulièrement à l'UX et l'accessibilité. Mais le développement de manière plus générale me plait aussi la communication que ça implique. Développer une app est pour moi surtout un enjeu de compréhension envers les besoins, les designers, les autres membres de l'équipe, et les utilisateurs finaux.",
       "J'aime aussi mettre mes compétence de développeur au service de projets plus créatifs. Coder à des fins « inutiles », pour des systèmes qui se contentent d'être plaisants ou beaux. Logiciels musicaux ou jeux, la création est pour moi une exploration motivée par la curiosité. Je bidouille pour la satisfaction de découvrir le résultat final. Comme vous pouvez le voir ici, je conserve une affection pour le web des années 2000, gloubiboulga de pages surprenantes et expressives.",
       "En dehors de ceci, j'aime la randonnée, les jeux de société, l'animation, le jazz fusion et mon chat tyrannique."
-    ]
+    ],
+    "links": {
+      "github": "Github",
+      "itch": "Itch",
+      "linkedin": "Linkedin",
+      "mail": "E-mail",
+      "soundcloud": "Soundcloud",
+      "twitter": "Twitter",
+      "youtube": "Youtube"
+    }
   },
   "contents": {
     "games": {
