feat(content): link to websites

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -12,17 +12,17 @@
   },
   "games": {
     "header": "Games",
-    "more": "itch.io",
+    "more": "More on itch.io",
     "play": "Play"
   },
   "music": {
     "header": "Music",
-    "more": "itch.io",
+    "more": "More on itch.io",
     "play": "Play"
   },
   "videos": {
     "header": "Videos",
-    "more": "Youtube",
+    "more": "More on Youtube",
     "play": "Watch"
   },
   "about": {
