--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -22,7 +22,7 @@
   },
   "videos": {
     "header": "Vidéos",
-    "more": "Plus sur Youtube",
+    "more": "Voir sur Youtube",
     "play": "Visionner"
   },
   "about": {
