--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -125,5 +125,17 @@
     "message": "Ce site propore une expérience musicale interactive. Il est donc recommandé d'avoir le son actif.",
     "accept": "Ok, je suis prêt !",
     "deny": "Non merci, je veux juste visiter un site web normal"
+  },
+  "options": {
+    "locale": {
+      "fr": {
+        "short": "fr",
+        "long": "Français"
+      },
+      "en": {
+        "short": "en",
+        "long": "English"
+      }
+    }
   }
 }
