feat(options): toggle sound

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -136,6 +136,10 @@
         "short": "en",
         "long": "English"
       }
+    },
+    "sound": {
+      "mute": "Mute audio",
+      "unmute": "Start audio"
     }
   }
 }
