fix(title): responsive animation

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -27,12 +27,12 @@
   },
   "about": {
     "header": "About me",
-    "name": "Clément Rivaille",
+    "name": "Clément Rivaille (Itooh)",
     "profession": "Web developer",
     "location": "Nantes, France",
     "presentation": [
       "I see creation as an exploration, driven by curiosity. I thus create for the joy of discovery. Beyond any vision, I'm mostly fond of fiddling. I like to build machines in which I can adjust variables, notes, instruments, colors, in order to find a pleasing result. Truth be told, I use the same process for writing. I focus on a setting, to develop its emotions and let myself be carried toward where they take me.",
-      "Web is a wonderful platform for creation. As you might have guessed here, I'm nostalgic of the web from the 2000s, where every page could be surprising and expressive. In a web 2.0 where each app is a potential business, I find it liberating to put my skills in something “useless”. Coding programs that have no other finality than being beautiful is a small rebellion against the imperative logic of algorithms.",
+      "Web is a wonderful platform for creation. As you might have guessed here, I'm nostalgic of the web from the 2000s, where every page could be surprising and expressive. In a web 2.0 where each app is a potential business, I find it liberating to put my development skills in something “useless”. Coding programs that have no other finality than being beautiful is a small rebellion against the imperative logic of algorithms.",
       "Is there thus any meaning in what I make? I could hardly say. I rarely try to express any strong message (although I would not dare to pretend that my works are “apolitical”!). My productions are mostly based on music, an art where meaning is purely emotional. But many of them are also interactive. I'm interested in creating experiences that are personal tp those who play them. Therefore I let the interpretation be free, in order to invite to exploration and expression.",
       "Beside this, I enjoy hiking, tabletop games, animation, fusion jazz and my tyrannical cat."
     ],
