--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -27,7 +27,7 @@
   },
   "about": {
     "header": "Qui je suis",
-    "name": "Clément Rivaille",
+    "name": "Clément Rivaille (Itooh)",
     "profession": "Développeur web",
     "location": "Nantes, France",
     "presentation": [
