--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -52,6 +52,14 @@
   "contents": {
     "games": {
       "description": "I develop small games as a hobby, mostly with Godot or HTML5. Often focused on music, my game-design philosophy is to look for the pleasure of the instant. Without necessarily any goal or challenge, I try first to create playful interactions and systems worthy to explore. As such I consider this very web site as a playable space.",
+      "line-momentum": {
+        "title": "Line Momentum",
+        "description": "Single-button rhythm game, based on minimalist music inspired by Steve Reich. Keep the rhythm and repeat motifs until you acquire them."
+      },
+      "last-point": {
+        "title": "Last Point",
+        "description": "In this game with non-linear narration, your mission is to save the galaxy. Unless you want to explore the solar system to learn about the mysteries surrounding it?"
+      },
       "echoes-traveler": {
         "title": "Echoes Traveler",
         "description": "A musical exploration game. Close your eyes, and let yourself wander into a world entirely made of instruments. Will you be able to solve its secrets?"
@@ -79,6 +87,10 @@
     },
     "music": {
       "description": "Generative music and minimalism fascinate me. I like to design logic system that produce harmonic atmospheres our emerging melodies. Also with an interactive aspect, because playing music is a primordial pleasure that I want to share. Thus I don't really have any song to share here, but playful musical applications.",
+      "noon-invasion": {
+        "title": "The Noon Invasion",
+        "description": "A transposition of Space Invaders into music. In this game, everything is an instrument: aliens, shots, explosions… Make your own jazz solo only by playing!"
+      },
       "colors-universe": {
         "title": "Colors of the Universe",
         "description": "A journey into the heart of harmonics. Dive into an abstract symphony reacting to all your moves, in an infinite microcosm of colors. By looking carefully, you might even find the solution to its conundrum…"
@@ -106,6 +118,14 @@
     },
     "videos": {
       "description": "This content is in French, although some of the videos have subtitles, and those automatically generated are actually not that bad. With my Youtube Channel “Excursions Virtuelles”, I share thought on video games as a imaginary to explore. From emotions procured by game-design to what a virtual world is expressing, as well as web culture and, always, escapism. I also enjoy video creation as an exercice in writing, rhythm, and even acting.",
+      "anodyne": {
+        "title": "The disillusion of virtual worlds",
+        "description": "An analysis of Anodyne 2 and its landscapes that explore our relation with virtual worlds. Worlds of escapism, fake, sometimes technically flawed… But who let a mark on us."
+      },
+      "web3": {
+        "title": "Web3 lies",
+        "description": "In 2021 we saw emerging from nowhere the expression “Year of NFT”, as blockchain and crypto have been sold to us as the future of the web. It's of course a complete scam. This essay attempt to decipher the manipulatory discourse around the self-proclaimed “Web3”."
+      },
       "traversees": {
         "title": "Traversées",
         "description": "Virtual spaces have a lot to tel! Through their architectures, their arts, the way we explore them… This series of short videos invite to discover memorable game landscapes."
