--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -89,7 +89,7 @@
       "description": "La musique générative et le minimalisme me fascinent. J'aime concevoir des systèmes logiques produisant des atmosphères harmoniques ou des mélodies émergentes. Avec également une composante interactive, car jouer de la musique procure un plaisir primitif que je souhaite partager. Je n'ai donc pas vraiment de morceaux à montrer ici, mais des applications musicales ludiques.",
       "noon-invasion": {
         "title": "The Noon Invasion",
-        "description": "Une transpisition de Space Invaders en musique. Dans ce jeu, tout est un instrument : les aliens, les tirs, les explosions… Improvisez votre propre solo de jazz simplement en jouant !"
+        "description": "Une transposition de Space Invaders en musique. Dans ce jeu, tout est un instrument : les aliens, les tirs, les explosions… Improvisez votre propre solo de jazz simplement en jouant !"
       },
       "colors-universe": {
         "title": "Colors of the Universe",
