--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -23,7 +23,7 @@
   },
   "videos": {
     "header": "Videos",
-    "more": "See all on Youtube",
+    "more": "My gamedev videos",
     "play": "Watch"
   },
   "about": {
@@ -121,7 +121,7 @@
       }
     },
     "videos": {
-      "description": "This content is in French, although some of the videos have subtitles, and those automatically generated are actually not that bad. With my Youtube Channel “Excursions Virtuelles”, I share thought on video games as a imaginary to explore. From emotions procured by game-design to what a virtual world is expressing, as well as web culture and, always, escapism. I also enjoy video creation as an exercice in writing, rhythm, and even acting.",
+      "description": "I created the french Youtube Channel “Excursions Virtuelles”, in which I shared thoughts on video games as an imaginary to explore. From emotions procured by game-design to what a virtual world is expressing, as well as web culture and, always, escapism. Today I maintain a gamedev channel, on which I publish devlogs and postmortems of my works.",
       "anodyne": {
         "title": "The disillusion of virtual worlds",
         "description": "An analysis of Anodyne 2 and its landscapes that explore our relation with virtual worlds. Worlds of escapism, fake, sometimes technically flawed… But who let a mark on us."
